--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
       content="Site for viewing your locality ratings"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/comp222.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Limelight&family=Syncopate&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Limelight&family=Source+Sans+Pro&family=Syncopate&family=Roboto&display=swap" rel="stylesheet">
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
